@@ -21,6 +21,7 @@ export(gclip)
 export(graphhopper_pat)
 export(gsection)
 export(gtfs2sldf)
+export(is_linepoint)
 export(islines)
 export(line2df)
 export(line2points)
@@ -29,6 +30,7 @@ export(lineLabels)
 export(locate2spdf)
 export(mapshape)
 export(mapshape_available)
+export(n_vertices)
 export(nearest2spdf)
 export(od2line)
 export(od_radiation)
